update :up: index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- =======================================================
   * Name: Rotaract Club of Navi Mumbai Industrial Area
-  * Template URL: https://ronmia.com/
+  * URL: https://ronmia.com/
   * Author: Smaran Ummadishetty
   * Contact : +91 96199 47506
   * Email : smaran.ummadishetty@gmail.com 
@@ -59,7 +59,7 @@
       >
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-phone d-flex align-items-center"
-            ><span>+918655752503</span></i
+            ><span>+91 86557 52503</span></i
           >
           <i class="bi bi-envelope d-flex align-items-center ms-4"
             ><span>ronmia2020@gmail.com</span></i
@@ -73,7 +73,7 @@
                 href="https://www.facebook.com/RONMIA-Rotaract-Club-Of-Navi-Mumbai-Industrial-Area-1408666476082348"
               ></a
             ></span></i>
-            <i class="bi bi-twitter d-flex align-items-center"
+            <i class="bi bi-twitter d-flex "
               ><span><a href="https://twitter.com/RONMIA_5"></a
             ></span></i>
             <i class="bi bi-instagram d-flex align-items-center"
@@ -178,7 +178,7 @@
               data-aos-delay="100"
             >
               <div class="about-img">
-                <img src="assets/img/about.jpg" alt="" />
+                <img src="assets/img/logo.png" alt="" />
               </div>
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
@@ -1015,8 +1015,8 @@ R.I.D. 3142, initiated in the year 2015-2016, has gloriously evolved, comprising
 
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>R.O.N.M.I.A 2022-23</span></strong
-          >. All Rights Reserved.
+          &copy; Copyrights <strong><span>R.O.N.M.I.A 2022-23</span></strong
+          >  All Rights Reserved.
         </div>
         <div class="credits">
          
